--- a/pilot/CMakeLists.txt
+++ b/pilot/CMakeLists.txt
@@ -58,6 +58,7 @@ add_service_files(
   FILES
   SetPilotState.srv
   ChatCompletion.srv
+  IdentifyStore.srv
 )
 
 ## Generate actions in the 'action' folder
