--- a/pilot/config/pilot_params.yaml
+++ b/pilot/config/pilot_params.yaml
@@ -10,11 +10,6 @@ llm_agent:
   summary_trigger: 10
   default_system_message: "You are a helpful AI assistant for a mobile robot with long-term memory."
 
-# Semantic Map Builder Parameters
-semantic_map_builder:
-  camera_topic: "/camera/rgb/image_raw"
-  identification_prompt: "You are a store identification system for a shopping robot. Look at this store front image and identify what type of store it is. Respond with ONLY the store type in 1-3 words (e.g., 'grocery store', 'electronics', 'clothing', 'pharmacy', etc.). Be specific but concise."
-
 # State Handler Parameters
 state_handler:
   rate: 10.0
@@ -37,3 +32,24 @@ pilot_node:
   base_frame: "base_link"
   x_offset: 0.02
   z_offset: -0.03
+  
+  # Store Navigation Parameters
+  camera_topic: "/camera/color/image_raw"
+  navigation_timeout: 120.0
+  exploring_rate: 20.0
+  # position_tolerance: 0.15 --- IGNORE --- See Move Base Params
+  # orientation_tolerance: 0.2 --- IGNORE --- See Move Base Params
+  camera_topic: "/camera/color/image_raw"
+  depth_topic: "/camera/depth/image_raw"
+  max_depth_distance: 3.0  # Maximum depth (in meters) to consider robot is facing a store
+  depth_check_size: 10  # Size of center region (in pixels) to check for depth
+  drop_point: [0, 3.0] 
+  store_locations:
+    - [1, 1.15]
+    - [1.6, -1]
+    - [1, -2.35]
+    - [0.4, -1.3]
+    - [-0.4, -0.7]
+    - [-1, -2.35]
+    - [-1.6, -1]
+    - [-1, 1.15]
